# antigravity-seo

./: .env.example  .gitattributes  .gitignore  .vercelignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  llms.txt  mcp_config.json  plugin.json  pyproject.toml  requirements-core.txt  requirements-google.txt  requirements-ocr.txt  requirements-report.txt  requirements-visual.txt  requirements.txt  uninstall.ps1  uninstall.sh  vercel.json
.antigravity-plugin/: plugin.json
.devcontainer/: devcontainer.json
.gemini-plugin/: plugin.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: runners-ci.yml  security.yml
agents/: blog-researcher.toml  blog-reviewer.toml  blog-seo.toml  blog-translator.toml  blog-writer.md  blog-writer.toml  seo-backlinks.toml  seo-cluster.toml  seo-competitor-pages.toml  seo-content.toml  seo-dataforseo.toml  seo-drift.toml  seo-ecommerce.toml  seo-firecrawl.toml  seo-flow.toml  seo-geo.toml  seo-google.toml  seo-hreflang.toml  seo-image-gen.toml  seo-images.toml  seo-keywords-free.toml  seo-local.toml  seo-maps.toml  seo-performance.toml  seo-plan.toml  seo-programmatic.toml  seo-schema.toml  seo-sitemap.toml  seo-supervisor.toml  seo-sxo.toml  seo-technical.toml  seo-trends.toml  seo-visual.toml
commands/: audit.md  auto.md  create.md  research.md  run.md  track.md
docs/: API-READINESS-MATRIX.md  API-READY.md  ARCHITECTURE.md  COMMANDS.md  DEMO-RUNBOOK.md  INSTALLATION.md  MCP-INTEGRATION.md  TROUBLESHOOTING.md
extensions/banana/: README.md  install.sh  uninstall.sh
extensions/dataforseo/: README.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh
extensions/firecrawl/: README.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh
hooks/: hooks.json  pre-commit-seo-check.sh  validate-schema.py
rules/: blog-content-rules.md  ecosystem-conventions.md  seo-quality-gates.md
scripts/: _dep_check.py  ahrefs_dr_free.py  analyze_blog.py  analyze_content.py  analyze_geo.py  analyze_hreflang.py  analyze_performance.py  analyze_programmatic.py  analyze_schema.py  analyze_sitemap.py  analyze_technical.py  backlinks_auth.py  bing_webmaster.py  blog_preflight.py  blog_render.py  bootstrap_environment.py  commoncrawl_graph.py  dataforseo_costs.py  dataforseo_normalize.py  demo_readiness.py  discourse_research.py  drift_baseline.py  drift_report.py  fetch_page.py  generate_competitor_pages.py  generate_hero.py  generate_premium_audit_report.py  generate_seo_plan.py  google_auth.py  google_report.py  keyword_planner.py  lint_prose.py  llm_provider.py  load_untrusted_root.py  moz_api.py  nlp_analyze.py  parse_html.py  probe_skill_selection_provider.py  run_api_smoke_suite.py  run_headless_audit.py  (+9 more)
scripts/connectors/: README.md  _http.py  crawl.py  onpage.py
skills/alert-manager/: SKILL.md
skills/backlink-analyzer/: SKILL.md
skills/blog/: SKILL.md
skills/blog-audio/: SKILL.md
skills/blog-cannibalization/: SKILL.md
skills/blog-cluster/: SKILL.md
skills/blog-factcheck/: SKILL.md
skills/blog-flow/: SKILL.md
skills/blog-geo/: SKILL.md
skills/blog-google/: SKILL.md
skills/blog-image/: SKILL.md
skills/blog-locale-audit/: SKILL.md
skills/blog-localize/: SKILL.md
skills/blog-multilingual/: SKILL.md
skills/blog-notebooklm/: SKILL.md
skills/blog-strategy/: SKILL.md
skills/blog-translate/: SKILL.md
skills/blog-write/: SKILL.md
skills/competitor-analysis/: SKILL.md
skills/content-gap-analysis/: SKILL.md
skills/content-quality-auditor/: SKILL.md
skills/noslop/: SKILL.md
tests/: conftest.py  test_antigravity_port_contracts.py  test_blog_delivery_contract.py  test_bootstrap_environment.py  test_command_coherence.py  test_demo_readiness.py  test_generate_seo_plan.py  test_headless_audit_helpers.py  test_installer_sync.py  test_load_untrusted_root.py  test_output_generators.py  test_security_contracts.py  test_security_v1_8_0.py  test_seo_pipeline_utils.py  test_sync_flow.py  test_verify_environment.py  test_version_coherence.py  test_workflow_contracts.py
website/: app.js  architecture.html  features.html  index.html  llms.txt  robots.txt  setup-guide.html  sitemap.xml  style.css
(+193 files in other folders)
