[project]
name = "antigravity-seo"
version = "1.9.6+antigravity.5"
description = "Comprehensive SEO analysis skill suite for Antigravity"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = [
  "antigravity",
  "antigravity-skills",
  "seo",
  "ai-seo",
  "technical-seo",
  "core-web-vitals",
  "schema-markup",
  "dataforseo",
  "mcp",
]
authors = [
  { name = "Muhammad Usman Ali" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Site Management",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/dotusmanali/antigravity-seo"
Repository = "https://github.com/dotusmanali/antigravity-seo"
