[project]
name = "antigravity-seo"
version = "2.0.0"
description = "Complete SEO analysis & Blog creation ecosystem for Antigravity"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = [
  "antigravity",
  "antigravity-skills",
  "seo",
  "ai-seo",
  "blog",
  "blog-writer",
  "content-marketing",
  "technical-seo",
  "core-web-vitals",
  "schema-markup",
  "dataforseo",
  "mcp",
  "geo",
  "aeo",
  "eeat",
  "topic-clusters",
  "multilingual",
]
authors = [
  { name = "dotusmanali" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Site Management",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/dotusmanali/antigravity-seo"
Repository = "https://github.com/dotusmanali/antigravity-seo"

[project.optional-dependencies]
core = [
    "textstat>=0.7.3,<1.0.0",
    "beautifulsoup4>=4.14.3,<5.0.0",
]
advanced = [
    "lxml>=6.1.0,<7.0.0",
    "jsonschema>=4.20.0,<5.0.0",
    "spacy>=3.7.0,<4.0.0",
    "sentence-transformers>=4.0.0,<5.0.0",
    "scikit-learn>=1.4.0,<2.0.0",
    "language-tool-python>=2.7.1,<3.0.0",
]
google = [
    "google-api-python-client>=2.194.0,<3.0.0",
    "google-auth>=2.20.0,<3.0.0",
    "google-auth-oauthlib>=1.3.1,<2.0.0",
    "google-auth-httplib2>=0.3.1,<1.0.0",
    "google-analytics-data>=0.18.0,<1.0.0",
]
ads = [
    "google-ads>=22.0.0,<26.0.0",
]
presentation = [
    "patchright>=1.40,<2.0",
    "weasyprint>=68.1,<70.0",
    "google-genai>=1.0.0,<2.0.0",
    "requests>=2.32.4,<3.0.0",
    "markdown>=3.7,<4.0",
]
